src/objects/APXTConga4__Conga_Email_Template__c.object
<CustomObject>
    <description>Email template manager for use with Conga Composer</description>
    <fields>
        <fullName>APXTConga4__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APXTConga4__HTMLBody__c</fullName>
        <label>HTML Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Is_Body_Attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When enabled, Conga Composer stores the body of the HTML template as an attachment, rather than in the Rich Text field.</inlineHelpText>
        <label>Use attachment for template body</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Name__c</fullName>
        <label>Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Template_Group__c</fullName>
        <label>Template Group</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXTConga4__TextBody__c</fullName>
        <label>Text Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Conga Email Template</label>
    <listViews>
        <fullName>APXTConga4__All</fullName>
        <columns>NAME</columns>
        <columns>APXTConga4__Name__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CET-{00000}</displayFormat>
        <label>Email Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conga Email Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>